--- a/web-fundamentals/CSS/Bottom Up/bottomup.css
+++ b/web-fundamentals/CSS/Bottom Up/bottomup.css
@@ -1,6 +1,3 @@
-*{
-    background-color: white;
-}
 
 
 .d1{
@@ -9,14 +6,15 @@
     color: aqua;    
     border-radius: 50px;
 }
+
 .d2{
-    background-color:aquamarine;
-    border-color: black;
+    background-color:#00FFFF;
+    border-color: #00FFFF;  
     color: white;
     border-radius: 50%;
-    
-    
+    border-width: 0px;
 }
+
 .d3{
     background-color:blue;
     color: white;
